@@ -14,8 +14,6 @@ import static org.dita.dost.util.Configuration.configuration;
 import static org.dita.dost.util.Constants.ANT_TEMP_DIR;
 import static org.dita.dost.util.XMLUtils.toList;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -35,13 +33,7 @@ public class ConversionArguments extends Arguments {
    * A Set of args are are handled by the launcher and should not be seen by
    * Main.
    */
-  private static final Set<String> LAUNCH_COMMANDS = ImmutableSet.of(
-    "-lib",
-    "-cp",
-    "-noclasspath",
-    "-nouserlib",
-    "-main"
-  );
+  private static final Set<String> LAUNCH_COMMANDS = Set.of("-lib", "-cp", "-noclasspath", "-nouserlib", "-main");
 
   private static final Map<String, Argument> ARGUMENTS = new HashMap<>();
 
@@ -68,7 +60,7 @@ public class ConversionArguments extends Arguments {
     }
   }
 
-  private static final Map<String, String> RESERVED_PROPERTIES = ImmutableMap.of(
+  private static final Map<String, String> RESERVED_PROPERTIES = Map.of(
     "transtype",
     "-f",
     "args.input",
@@ -87,6 +79,7 @@ public class ConversionArguments extends Arguments {
   File projectFile;
 
   public final List<String> inputs = new ArrayList<>();
+  public final List<String> formats = new ArrayList<>();
   private final List<String> resources = new ArrayList<>();
 
   /**
@@ -156,7 +149,14 @@ public class ConversionArguments extends Arguments {
       } else if (ARGUMENTS.containsKey(getArgumentName(arg))) {
         definedProps.putAll(handleParameterArg(arg, args, ARGUMENTS.get(getArgumentName(arg))));
       } else if (getPluginArguments().containsKey(getArgumentName(arg))) {
-        definedProps.putAll(handleParameterArg(arg, args, getPluginArguments().get(getArgumentName(arg))));
+        final String argument = getArgumentName(arg);
+        final String name = argument.substring(2);
+        if (RESERVED_PROPERTIES.containsKey(name)) {
+          throw new BuildException(
+            "Property %s cannot be set with --, use %s instead".formatted(name, RESERVED_PROPERTIES.get(name))
+          );
+        }
+        definedProps.putAll(handleParameterArg(arg, args, getPluginArguments().get(argument)));
       } else if (LAUNCH_COMMANDS.contains(arg)) {
         // catch script/ant mismatch with a meaningful message
         // we could ignore it, but there are likely to be other
@@ -177,9 +177,6 @@ public class ConversionArguments extends Arguments {
         // if it's no other arg, it may be the target
         targets.addElement(arg);
       }
-    }
-    if (!inputs.isEmpty()) {
-      definedProps.put("args.input", inputs.get(0));
     }
     if (!resources.isEmpty()) {
       definedProps.put("args.resources", String.join(File.pathSeparator, resources));
@@ -204,7 +201,7 @@ public class ConversionArguments extends Arguments {
    */
   private void handleArgProject(final String arg, final Deque<String> args) {
     final Map.Entry<String, String> entry = parse(arg, args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("Missing value for project " + entry.getKey());
     }
     projectFile = new File(entry.getValue()).getAbsoluteFile();
@@ -237,7 +234,7 @@ public class ConversionArguments extends Arguments {
         " instead"
       );
     }
-    return ImmutableMap.of(entry.getKey(), entry.getValue());
+    return Map.of(entry.getKey(), entry.getValue());
   }
 
   /**
@@ -245,7 +242,7 @@ public class ConversionArguments extends Arguments {
    */
   private void handleArgInput(final String arg, final Deque<String> args, final Argument argument) {
     final Map.Entry<String, String> entry = parse(arg, args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("Missing value for input " + entry.getKey());
     }
     inputs.add(argument.getValue(entry.getValue()));
@@ -253,18 +250,18 @@ public class ConversionArguments extends Arguments {
 
   private void handleArgFormat(final String arg, final Deque<String> args, final Argument argument) {
     final Map.Entry<String, String> entry = parse(arg, args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("Missing value for transtype " + entry.getKey());
     }
     if (!Configuration.transtypes.contains(entry.getValue())) {
       throw new BuildException(MessageUtils.getMessage("DOTA001F", entry.getValue()).toString());
     }
-    definedProps.put(argument.property, entry.getValue());
+    formats.add(argument.getValue(entry.getValue()));
   }
 
   private void handleArgFilter(final String arg, final Deque<String> args, final Argument argument) {
     final Map.Entry<String, String> entry = parse(arg, args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("Missing value for input " + entry.getKey());
     }
     final Object prev = definedProps.get(argument.property);
@@ -276,7 +273,7 @@ public class ConversionArguments extends Arguments {
 
   private void handleArgResource(final String arg, final Deque<String> args, final Argument argument) {
     final Map.Entry<String, String> entry = parse(arg, args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("Missing value for resource " + entry.getKey());
     }
     resources.add(argument.getValue(entry.getValue()));
@@ -290,18 +287,7 @@ public class ConversionArguments extends Arguments {
     if (entry.getValue() == null) {
       throw new BuildException("Missing value for property " + entry.getKey());
     }
-    return ImmutableMap.of(argument.property, argument.getValue(entry.getValue()));
-  }
-
-  /**
-   * Get argument name
-   */
-  private String getArgumentName(final String arg) {
-    int pos = arg.indexOf("=");
-    if (pos == -1) {
-      pos = arg.indexOf(":");
-    }
-    return arg.substring(0, pos != -1 ? pos : arg.length());
+    return Map.of(argument.property, argument.getValue(entry.getValue()));
   }
 
   /**
@@ -335,7 +321,7 @@ public class ConversionArguments extends Arguments {
    */
   private void handleArgPropertyFile(final String arg, final Deque<String> args) {
     final Map.Entry<String, String> entry = parse(arg.substring(2), args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("You must specify a property filename when using the --propertyfile argument");
     }
     propertyFiles.addElement(entry.getValue());
@@ -343,7 +329,7 @@ public class ConversionArguments extends Arguments {
 
   private void handleArgRepeat(final String arg, final Deque<String> args) {
     final Map.Entry<String, String> entry = parse(arg.substring(2), args);
-    if (entry.getValue() == null) {
+    if (entry.getValue() == null || entry.getValue().isBlank()) {
       throw new BuildException("You must repeat number");
     }
     repeat = Integer.parseInt(entry.getValue());
@@ -412,10 +398,12 @@ public class ConversionArguments extends Arguments {
       .usage(locale.getString("conversion.usage.project"))
       //                .usage("dita --propertyfile=<file> [options]")
       .subcommands("deliverables", locale.getString("conversion.subcommand.deliverables"))
+      .subcommands("init", locale.getString("conversion.subcommand.init"))
       .subcommands("install", locale.getString("conversion.subcommand.install"))
       .subcommands("plugins", locale.getString("conversion.subcommand.plugins"))
       .subcommands("transtypes", locale.getString("conversion.subcommand.transtypes"))
       .subcommands("uninstall", locale.getString("conversion.subcommand.uninstall"))
+      .subcommands("validate", locale.getString("conversion.subcommand.validate"))
       .subcommands("version", locale.getString("conversion.subcommand.version"))
       .arguments("i", "input", "file", locale.getString("conversion.argument.input"))
       .arguments("f", "format", "name", locale.getString("conversion.argument.format"))
