@@ -26,23 +26,24 @@
 
 package org.dita.dost.invoker;
 
+import static java.nio.file.FileVisitResult.CONTINUE;
 import static org.dita.dost.invoker.Arguments.*;
 import static org.dita.dost.log.DITAOTAntLogger.USE_COLOR;
+import static org.dita.dost.platform.PluginParser.FEATURE_ELEM;
+import static org.dita.dost.platform.PluginParser.FEATURE_ID_ATTR;
 import static org.dita.dost.util.Configuration.transtypes;
 import static org.dita.dost.util.Constants.ANT_TEMP_DIR;
 import static org.dita.dost.util.LangUtils.pair;
 import static org.dita.dost.util.LangUtils.zipWithIndex;
+import static org.dita.dost.util.XMLUtils.toList;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableMap;
 import java.io.*;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.nio.file.Files;
-import java.nio.file.InvalidPathException;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -67,6 +68,8 @@ import org.dita.dost.project.Project.Publication;
 import org.dita.dost.project.ProjectFactory;
 import org.dita.dost.util.Configuration;
 import org.dita.dost.util.URLUtils;
+import org.w3c.dom.Attr;
+import org.w3c.dom.Element;
 
 /**
  * Command line entry point into DITA-OT. This class is entered via the canonical
@@ -85,8 +88,9 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   private static final String ANT_PLUGIN_FILE = "plugin.file";
   private static final String ANT_PLUGIN_ID = "plugin.id";
   private static final String ANT_PROJECT_DELIVERABLE = "project.deliverable";
+  private static final String ANT_PROJECT_CONTEXT = "project.context";
   private static final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmssSSS");
-  private static final Map<String, String> RESERVED_PARAMS = ImmutableMap.of(
+  private static final Map<String, String> RESERVED_PARAMS = Map.of(
     "output.dir",
     "output",
     "transtype",
@@ -98,8 +102,8 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   );
   private static final String CONFIGURATION_FILE = ".ditaotrc";
 
-  @Deprecated
   /** @deprecated since 4.2 */
+  @Deprecated
   private static final String CONFIGURATION_FILE_OLD = "local.properties";
 
   /**
@@ -341,11 +345,38 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     } else if (args instanceof VersionArguments) {
       printVersion();
       return;
+    } else if (args instanceof final ValidateArguments validateArgs) {
+      final File ditaDir = new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME));
+      final File basePluginDir = new File(ditaDir, Configuration.pluginResourceDirs.get("org.dita.base").getPath());
+      buildFile = findBuildFile(basePluginDir.getAbsolutePath(), "build.xml");
+      definedProps.putAll(getLocalProperties(ditaDir));
+      definedProps.put(USE_COLOR, Boolean.toString(validateArgs.useColor));
+      if (validateArgs.projectFile == null) {
+        projectProps = Collections.singletonList(definedProps);
+      } else {
+        projectProps = collectContextProperties(validateArgs.projectFile, definedProps);
+      }
+      for (Map<String, Object> projectProp : projectProps) {
+        String err = null;
+        if (!projectProp.containsKey(ANT_ARGS_INPUT)) {
+          err = locale.getString("conversion.error.input_not_defined");
+        }
+        if (err != null) {
+          throw new CliException(err, args.getUsage(true));
+        }
+        // default values
+        if (!projectProp.containsKey(ANT_BASE_TEMP_DIR)) {
+          projectProp.put(ANT_BASE_TEMP_DIR, new File(System.getProperty("java.io.tmpdir")).getAbsolutePath());
+        }
+      }
     } else if (args instanceof TranstypesArguments) {
       printTranstypes();
       return;
     } else if (args instanceof final DeliverablesArguments deliverablesArgs) {
       printDeliverables(deliverablesArgs);
+      return;
+    } else if (args instanceof final InitArguments initArgs) {
+      init(initArgs);
       return;
     } else if (args instanceof final InstallArguments installArgs) {
       install(installArgs);
@@ -360,7 +391,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       definedProps.putAll(getLocalProperties(ditaDir));
       definedProps.put(USE_COLOR, Boolean.toString(conversionArgs.useColor));
       if (conversionArgs.projectFile == null) {
-        projectProps = Collections.singletonList(definedProps);
+        projectProps = collectArguments(conversionArgs.inputs, conversionArgs.formats, definedProps);
       } else {
         projectProps = collectProperties(conversionArgs.projectFile, definedProps);
       }
@@ -431,6 +462,26 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     readyToRun = true;
   }
 
+  private List<Map<String, Object>> collectArguments(
+    List<String> inputs,
+    List<String> formats,
+    Map<String, Object> definedProps
+  ) {
+    if (inputs.isEmpty() || formats.isEmpty()) {
+      return List.of(definedProps);
+    }
+    final String input = inputs.get(inputs.size() - 1);
+    return formats
+      .stream()
+      .map(format -> {
+        final Map<String, Object> res = new HashMap<>(definedProps);
+        res.put(ANT_ARGS_INPUT, input);
+        res.put(ANT_TRANSTYPE, format);
+        return res;
+      })
+      .toList();
+  }
+
   private void uninstall(UninstallArguments installArgs) {
     if (installArgs.uninstallId == null) {
       throw new CliException(locale.getString("uninstall.error.identifier_not_defined"), args.getUsage(true));
@@ -449,6 +500,110 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     }
   }
 
+  private void init(InitArguments initArguments) {
+    if (initArguments.list) {
+      printInitList();
+      return;
+    }
+
+    if (initArguments.template == null) {
+      throw new CliException(locale.getString("init.error.template_not_defined"), initArguments.getUsage(true));
+    }
+    final var target = Optional
+      .ofNullable(initArguments.output)
+      .orElseGet(() -> Paths.get(".").toAbsolutePath().normalize());
+    final var source = getTemplateDir(initArguments.template);
+    try {
+      Files.walkFileTree(
+        source,
+        new SimpleFileVisitor<>() {
+          @Override
+          public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
+            var targetDir = target.resolve(source.relativize(dir));
+            try {
+              Files.copy(dir, targetDir);
+            } catch (FileAlreadyExistsException e) {
+              if (!Files.isDirectory(targetDir)) {
+                throw e;
+              }
+            }
+            return CONTINUE;
+          }
+
+          @Override
+          public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+            var dst = target.resolve(source.relativize(file));
+            logger.debug("Create {}", dst);
+            Files.copy(file, dst);
+            return CONTINUE;
+          }
+        }
+      );
+      logger.info(locale.getString("init.info.create").formatted(target, initArguments.template));
+    } catch (FileAlreadyExistsException e) {
+      throw new BuildException(locale.getString("init.error.file_already_exists").formatted(e.getMessage()), e);
+    } catch (IOException e) {
+      throw new BuildException(locale.getString("init.error.create_failed").formatted(e.getMessage()), e);
+    }
+  }
+
+  /**
+   * Get init template source directory.
+   * @param template template name
+   * @return template source directory
+   * @throws BuildException when template not found
+   */
+  private Path getTemplateDir(String template) {
+    final List<Element> plugins = toList(Plugins.getPluginConfiguration().getElementsByTagName(FEATURE_ELEM));
+    return plugins
+      .stream()
+      .filter(feature -> Objects.equals(feature.getAttribute(FEATURE_ID_ATTR), "init.template"))
+      .map(feature ->
+        Optional
+          .ofNullable(feature.getAttributeNode("file"))
+          .map(Attr::getValue)
+          .map(value -> Paths.get(URI.create(feature.getBaseURI()).resolve(value)))
+          .orElse(null)
+      )
+      .filter(dir -> Objects.equals(template, dir.getFileName().toString()))
+      .filter(Files::exists)
+      .findAny()
+      .orElseThrow(() -> new BuildException(locale.getString("init.error.template_not_found").formatted(template)));
+  }
+
+  /**
+   * Print list of init templates and their descriptions.
+   */
+  private void printInitList() {
+    final List<Element> plugins = toList(Plugins.getPluginConfiguration().getElementsByTagName(FEATURE_ELEM));
+    var templates = plugins
+      .stream()
+      .filter(feature -> Objects.equals(feature.getAttribute(FEATURE_ID_ATTR), "init.template"))
+      .map(feature ->
+        Map.entry(
+          Optional
+            .ofNullable(feature.getAttributeNode("file"))
+            .map(Attr::getValue)
+            .map(value -> Paths.get(URI.create(feature.getBaseURI()).resolve(value)).getFileName().toString())
+            .orElse(null),
+          Optional.ofNullable(feature.getAttributeNode("desc")).map(Attr::getValue).orElse(null)
+        )
+      )
+      .filter(entry -> Objects.nonNull(entry.getKey()))
+      .sorted(Map.Entry.comparingByKey())
+      .toList();
+    if (!templates.isEmpty()) {
+      var width = templates
+        .stream()
+        .map(stringStringEntry -> stringStringEntry.getKey().length())
+        .max(Integer::compare)
+        .get();
+      templates.forEach(dir ->
+        logger.info(dir.getKey() + " ".repeat(width - dir.getKey().length()) + "  " + dir.getValue())
+      );
+    }
+  }
+
   private void install(InstallArguments installArgs) {
     final PluginInstall pluginInstall = new PluginInstall();
     pluginInstall.setDitaDir(new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME)));
@@ -457,29 +612,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       pluginInstall.setForce(Boolean.parseBoolean(installArgs.definedProps.get("force").toString()));
     }
     if (installArgs.installFile != null) {
-      final File f = new File(installArgs.installFile.replace('/', File.separatorChar)).getAbsoluteFile();
-      final String pluginFile = f.exists() ? f.getAbsolutePath() : installArgs.installFile;
-      try {
-        pluginInstall.setPluginFile(Paths.get(pluginFile));
-      } catch (InvalidPathException e) {
-        // Ignore
-      }
-      try {
-        final URI uri = new URI(pluginFile);
-        if (uri.isAbsolute()) {
-          pluginInstall.setPluginUri(uri);
-        }
-      } catch (URISyntaxException e) {
-        // Ignore
-      }
-      if (pluginFile.contains("@")) {
-        final String[] tokens = pluginFile.split("@");
-        pluginInstall.setPluginName(tokens[0]);
-        pluginInstall.setPluginVersion(new SemVerMatch(tokens[1]));
-      } else {
-        pluginInstall.setPluginName(pluginFile);
-        pluginInstall.setPluginVersion(null);
-      }
+      parseInstallFile(installArgs.installFile, pluginInstall);
     }
 
     try {
@@ -488,6 +621,37 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       throw e;
     } catch (Exception e) {
       throw new CliException(e.getMessage(), e);
+    }
+  }
+
+  private void parseInstallFile(String installFile, PluginInstall pluginInstall) {
+    final File pluginFile = new File(installFile.replace('/', File.separatorChar)).getAbsoluteFile();
+    if (pluginFile.exists()) {
+      try {
+        pluginInstall.setPluginFile(pluginFile.toPath());
+        return;
+      } catch (InvalidPathException e) {
+        // Ignore
+      }
+    }
+
+    try {
+      final URI uri = new URI(installFile);
+      if (uri.isAbsolute()) {
+        pluginInstall.setPluginUri(uri);
+        return;
+      }
+    } catch (URISyntaxException e) {
+      // Ignore
+    }
+
+    if (installFile.contains("@")) {
+      final String[] tokens = installFile.split("@");
+      pluginInstall.setPluginName(tokens[0]);
+      pluginInstall.setPluginVersion(new SemVerMatch(tokens[1]));
+    } else {
+      pluginInstall.setPluginName(installFile);
+      pluginInstall.setPluginVersion(null);
     }
   }
 
@@ -609,7 +773,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
           });
         final List<org.dita.dost.project.Project.Deliverable.Profile.DitaVal> ditavals = Stream
           .concat(publications.profiles().ditavals().stream(), context.profiles().ditavals().stream())
-          .collect(Collectors.toList());
+          .toList();
         if (!ditavals.isEmpty()) {
           final String filters = ditavals
             .stream()
@@ -623,6 +787,60 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       .collect(Collectors.toList());
     if (runDeliverable != null && projectProps.isEmpty()) {
       throw new CliException(locale.getString("project.error.deliverable_not_found").formatted(runDeliverable));
+    }
+
+    return projectProps;
+  }
+
+  private List<Map<String, Object>> collectContextProperties(
+    final File projectFile,
+    final Map<String, Object> definedProps
+  ) {
+    final URI base = projectFile.toURI();
+    final org.dita.dost.project.Project project = readProjectFile(projectFile);
+
+    return collectContextProperties(project, base, definedProps);
+  }
+
+  @VisibleForTesting
+  List<Map<String, Object>> collectContextProperties(
+    final org.dita.dost.project.Project project,
+    final URI base,
+    final Map<String, Object> definedProps
+  ) {
+    final String runContext = (String) definedProps.get(ANT_PROJECT_CONTEXT);
+
+    final List<Map<String, Object>> projectProps = zipWithIndex(project.contexts())
+      .filter(entry -> runContext == null || Objects.equals(entry.getKey().id(), runContext))
+      .map(entry -> {
+        final org.dita.dost.project.Project.Context context = entry.getKey();
+        final Map<String, Object> props = new HashMap<>(definedProps);
+
+        props.put(
+          ANT_PROJECT_CONTEXT,
+          context.id() != null ? context.id() : String.format("context-%d", entry.getValue() + 1)
+        );
+        final URI input = base.resolve(context.inputs().inputs().get(0).href());
+        props.put(ANT_ARGS_INPUT, input.toString());
+        props.put(ANT_TRANSTYPE, "validate");
+        final List<org.dita.dost.project.Project.Deliverable.Profile.DitaVal> ditavals = context
+          .profiles()
+          .ditavals()
+          .stream()
+          .toList();
+        if (!ditavals.isEmpty()) {
+          final String filters = ditavals
+            .stream()
+            .map(ditaVal -> Paths.get(base.resolve(ditaVal.href())).toString())
+            .collect(Collectors.joining(File.pathSeparator));
+          props.put("args.filter", filters);
+        }
+
+        return props;
+      })
+      .collect(Collectors.toList());
+    if (runContext != null && projectProps.isEmpty()) {
+      throw new CliException(locale.getString("project.error.deliverable_not_found").formatted(runContext));
     }
 
     return projectProps;
